Linking front and API

--- a/front-api-cocletima/src/app/home/home.component.html
+++ b/front-api-cocletima/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <h1>CocletimApp</h1>
 
-    <p>Nombre actuel : </p>
+    <p>Nombre actuel : </p>{{acutalNumber}}
     <button>Récupérer le nombre actuel</button>
 
 <form>
