--- a/front-api-cocletima/src/app/home/home.component.html
+++ b/front-api-cocletima/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <h1>CocletimApp</h1>
 
-    <p name="currentNumber">Nombre actuel : </p>{{currentNumber}}
+    <p name="currentNumber">Nombre actuel : {{currentNumber}}</p>
     <button mat-stroked-button name="get" (click)="getCurrentNumber()">Récupérer le nombre actuel</button>
 
 <form [formGroup]="form">
