--- a/front-api-cocletima/src/app/home/home.component.html
+++ b/front-api-cocletima/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <h1>CocletimApp</h1>
 
-    <p name="currentNumber">Nombre actuel : {{currentNumber}}</p>
-    <button mat-stroked-button name="get" (click)="getCurrentNumber()">Récupérer le nombre actuel</button>
+    <p id="currentNumber" class="currentNumber">Nombre actuel : {{currentNumber}}</p>
+    <button name="get" (click)="getCurrentNumber()">Récupérer le nombre actuel</button>
 
 <form [formGroup]="form">
     <label>Nombre à additionner au nombre actuel :</label>
